# database-structure-sync

./: .gitignore  .lintstagedrc  .prettierignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml
docs/plans/: 2026-01-24-database-structure-sync-design.md  2026-01-24-implementation-plan.md
flatpak/: README.md  com.dbstructsync.app.desktop  com.dbstructsync.app.metainfo.xml  com.dbstructsync.app.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  driver.rs  error.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs  mysql.rs  postgres.rs  traits.rs
src-tauri/src/db/mysql/: generator.rs  mod.rs  reader.rs
src-tauri/src/db/postgres/: generator.rs  mod.rs  reader.rs
src-tauri/src/diff/: comparator.rs  cross_compare.rs  mod.rs
src-tauri/src/models/: connection.rs  diff.rs  mod.rs  schema.rs
src-tauri/src/ssh/: mod.rs  tunnel.rs
src-tauri/src/storage/: config.rs  config_tests.rs  crypto.rs  mod.rs
src-tauri/src/types/: canonical.rs  mapping.rs  mariadb_mapper.rs  mod.rs  mysql_mapper.rs  postgres_mapper.rs
src-tauri/tests/: integration_test.rs  sql_generator_test.rs
src/__tests__/: App.test.tsx
src/components/: AppLogo.tsx
src/components/ConnectionForm/: BasicTab.tsx  ConnectionForm.tsx  SshTab.tsx  SslTab.tsx  formMapper.ts  useConnectionForm.ts
src/components/DiffTree/: DiffTree.tsx  index.ts
src/components/LoadingState/: index.ts  (+1 more)
src/hooks/: index.ts  useConnections.ts  useSync.ts
src/lib/: api.ts  i18n.ts  utils.test.ts
src/locales/: en-US.json  zh-CN.json
src/test/: setup.ts  utils.tsx
src/types/: index.ts
(+41 files in other folders)
