[package]
name = "database-structure-sync"
version = "1.0.0"
description = "Cross-platform database schema comparison and synchronization tool"
authors = ["Cooper <myxiaoao@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/myxiaoao/database-structure-sync"
homepage = "https://github.com/myxiaoao/database-structure-sync"
keywords = ["database", "schema", "sync", "mysql", "postgresql"]
categories = ["database", "development-tools"]
edition = "2024"
rust-version = "1.85"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "database_structure_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite"] }
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
shellexpand = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
debug = true

